# os-exam-prep

./: .gitignore  CMakeLists.txt  LICENSE  README.adoc
task-1/: main.cpp  main2.cpp
task-2-sortings/: main  main2  processes.cpp  processes.h  threads.cpp
task-3-messenger/: common.h  first-messenger.cpp  second-messenger.cpp  single-messenger.cpp  test_access.cpp
task-4-semaphores/: philosophers.cpp  utils.h
task-4-semaphores-philosophers/: philosophers-pugachev-variant.cpp  philosophers.cpp  utils.h
task-5-stream-redirection/: a.out  redirection.cpp  utils.h
task-6-copy-paste/: FileFrom.txt  a.out  dublicator.cpp  duplicator.cpp
task-7-dir-info/: a.out  dir-info.cpp  utils.h
task-8-shmemory/: a.out  shm  shmemory.cpp
task-8-shmemory-semaphores/: semaphores_i.h  shmemory.cpp  utils.h
